# split-flap-display-web

./: .dockerignore  .gitattributes  .gitignore  BACKEND_SPEC.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: .env  app.conf  app.conf.example  requirements.txt
backend-go/: .dockerignore  Dockerfile  Makefile  README.md  app.conf.example  go.mod  go.sum
backend-go/cmd/server/: main.go
backend-go/internal/api/: server.go
backend-go/internal/config/: config.go  config_test.go
backend-go/internal/models/: message.go
backend-go/internal/mqttclient/: client.go
backend-go/internal/queue/: queue.go
backend-go/internal/scheduler/: scheduler.go  scheduler_test.go
backend-go/internal/store/: store.go
backend/app/: config.py  main.py  models.py  mqtt_client.py  scheduler.py  scheduler_api.py
backend/tests/: __init__.py  _fixtures.py  test_add_remove.py  test_message_and_store.py  test_mqtt_client.py  test_selection.py  test_sse_merge.py  test_state.py  test_subscribers.py  test_tick.py
frontend/static/: app.js  index.html  style.css
