[project]
name = "split-flap-display-web"
version = "0.1.0"
description = "Web interface for controlling a split-flap display via MQTT"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic-settings==2.3.3",
    "asyncio-mqtt==0.16.1",
    "paho-mqtt<2.0.0",
    "sse-starlette==2.1.0",
]

[tool.uv]
dev-dependencies = []
